# IBM_CICS_Emulation

./: CMakeLists.txt
apps/console-demo/: CMakeLists.txt  main.cpp
cmake/: CICSConfig.h.in
docs/: API.md  API_REFERENCE.md  BACKGROUND.md  BUILD.md  CHANGELOG.md  LICENSE.txt  README.md  TESTING.md
examples/advanced/: CMakeLists.txt  complete_system.cpp
examples/basic/: CMakeLists.txt  channel_example.cpp  cics_example.cpp  counter_example.cpp  document_example.cpp  dump_example.cpp  ebcdic_example.cpp  hello_cics.cpp  interval_example.cpp  jcl_example.cpp  journal_example.cpp  spool_example.cpp  storage_example.cpp  syncpoint_example.cpp  task_example.cpp  tdq_example.cpp  tsq_example.cpp  utilities_example.cpp  vsam_example.cpp
libs/abend-handler/: CMakeLists.txt
libs/abend-handler/include/cics/abend/: abend.hpp
libs/abend-handler/src/: abend.cpp
libs/bms/: CMakeLists.txt
libs/bms/include/cics/bms/: bms.hpp
libs/bms/src/: bms.cpp
libs/channel/: CMakeLists.txt
libs/channel/include/cics/channel/: channel.hpp
libs/channel/src/: channel.cpp
libs/cics-core/: CMakeLists.txt
libs/cics-core/include/cics/cics/: cics_types.hpp
libs/cics-core/src/: cics_manager.cpp  file_control.cpp  program_manager.cpp  transaction_manager.cpp
libs/common/: CMakeLists.txt
libs/common/include/cics/common/: cli.hpp  config.hpp  error.hpp  logging.hpp  memory_pool.hpp  perf.hpp  threading.hpp  types.hpp
libs/common/src/: error.cpp  logging.cpp  threading.cpp  types.cpp
libs/compression/: CMakeLists.txt
libs/compression/include/cics/compression/: compression.hpp
libs/compression/src/: compression.cpp
libs/config/: CMakeLists.txt
libs/config/include/cics/config/: config.hpp
libs/config/src/: config.cpp
libs/copybook/: CMakeLists.txt
libs/copybook/include/cics/copybook/: copybook.hpp
libs/copybook/src/: copybook.cpp
libs/datetime/: CMakeLists.txt
libs/datetime/include/cics/datetime/: datetime.hpp
libs/datetime/src/: datetime.cpp
libs/dfsmshsm/: CMakeLists.txt
libs/dfsmshsm/include/cics/dfsmshsm/: dfsmshsm_types.hpp  hsm.hpp
libs/dfsmshsm/src/: migration_manager.cpp  storage_manager.cpp
libs/document/: CMakeLists.txt
libs/document/include/cics/document/: document.hpp
libs/document/src/: document.cpp
libs/dump/: CMakeLists.txt
libs/dump/include/cics/dump/: dump.hpp
libs/dump/src/: dump.cpp
libs/ebcdic/: CMakeLists.txt
libs/ebcdic/include/cics/ebcdic/: ebcdic.hpp
libs/ebcdic/src/: ebcdic.cpp
libs/file-utils/: CMakeLists.txt
libs/file-utils/include/cics/fileutils/: file_utils.hpp
libs/file-utils/src/: file_utils.cpp
libs/gdg/: CMakeLists.txt
libs/gdg/include/cics/gdg/: gdg.hpp  gdg_types.hpp
libs/gdg/src/: gdg_manager.cpp  generation.cpp
libs/inquire/: CMakeLists.txt
libs/inquire/include/cics/inquire/: inquire.hpp
libs/inquire/src/: inquire.cpp
libs/interval-control/: CMakeLists.txt
libs/interval-control/include/cics/interval/: interval_control.hpp
libs/interval-control/src/: interval_control.cpp
libs/jcl/: CMakeLists.txt
libs/jcl/include/cics/jcl/: jcl_parser.hpp
libs/jcl/src/: jcl_parser.cpp
libs/journal/: CMakeLists.txt
libs/journal/include/cics/journal/: journal.hpp
libs/journal/src/: journal.cpp
libs/master-catalog/: CMakeLists.txt
libs/master-catalog/include/cics/catalog/: catalog.hpp  master_catalog.hpp
libs/master-catalog/src/: catalog_entry.cpp  master_catalog.cpp  volume_manager.cpp
libs/named-counter/: CMakeLists.txt
libs/named-counter/include/cics/counter/: counter.hpp
libs/named-counter/src/: counter.cpp
libs/program-control/: CMakeLists.txt
libs/program-control/include/cics/program/: program_control.hpp
libs/program-control/src/: program_control.cpp
libs/security/: CMakeLists.txt
libs/security/include/cics/security/: security.hpp  security_context.hpp
libs/security/src/: authentication.cpp  encryption.cpp  security_context.cpp
libs/serialization/: CMakeLists.txt
libs/serialization/include/cics/serialization/: serialization.hpp
libs/serialization/src/: serialization.cpp
libs/spool/: CMakeLists.txt
libs/spool/include/cics/spool/: spool.hpp
libs/spool/src/: spool.cpp
libs/storage-control/: CMakeLists.txt
libs/storage-control/include/cics/storage/: storage_control.hpp
libs/storage-control/src/: storage_control.cpp
libs/string-utils/: CMakeLists.txt
libs/string-utils/include/cics/stringutils/: string_utils.hpp
libs/string-utils/src/: string_utils.cpp
libs/syncpoint/: CMakeLists.txt
libs/syncpoint/include/cics/syncpoint/: syncpoint.hpp
libs/syncpoint/src/: syncpoint.cpp
libs/task-control/: CMakeLists.txt
libs/task-control/include/cics/task/: task_control.hpp
libs/task-control/src/: task_control.cpp
libs/tdq/: CMakeLists.txt
libs/tdq/include/cics/tdq/: tdq_types.hpp
libs/tdq/src/: tdq_manager.cpp
libs/terminal-control/: CMakeLists.txt
libs/terminal-control/include/cics/terminal/: terminal.hpp
libs/terminal-control/src/: terminal.cpp
libs/tsq/: CMakeLists.txt
libs/tsq/include/cics/tsq/: tsq_types.hpp
libs/tsq/src/: tsq_manager.cpp
libs/uuid/: CMakeLists.txt
libs/uuid/include/cics/uuid/: uuid.hpp
libs/uuid/src/: uuid.cpp
libs/validation/: CMakeLists.txt
libs/validation/include/cics/validation/: validation.hpp
libs/validation/src/: validation.cpp
libs/vsam/: CMakeLists.txt
libs/vsam/include/cics/vsam/: vsam_types.hpp
libs/vsam/src/: ksds_file.cpp  vsam_buffer.cpp  vsam_file.cpp  vsam_index.cpp
scripts/: build.bat  build.sh
tests/: CMakeLists.txt
tests/benchmarks/: benchmark_framework.hpp  benchmark_main.cpp  benchmark_vsam.cpp
tests/framework/: test_framework.hpp
tests/integration/: test_vsam_integration.cpp
tests/unit/: test_cics.cpp  test_error.cpp  test_types.cpp  test_vsam.cpp
